--- a/src/psychology/game/templates/level.html
+++ b/src/psychology/game/templates/level.html
@@ -3,12 +3,28 @@
 <body>
 
 {% for hint in level.hints.all %}
-<input type="button" name="{{hint.pk}}" value="hint {{forloop.counter}}" id=""/>
+<a class="hint" href="/hint/{{hint.pk}}/">Hint #{{forloop.counter}}</a>
 {% endfor %}
 
 <br>
 Answer: <input>
 
+
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.1.1.min.js"></script>
+<script type="text/javascript" src="/static/javascript.js/"></script>
+<link rel="stylesheet" href="/static/fancybox/source/jquery.fancybox.css?v=2.1.4" type="text/css" media="screen" />
+<script type="text/javascript" src="/static/fancybox/source/jquery.fancybox.pack.js?v=2.1.4"></script>
+
+<!-- Optionally add helpers - button, thumbnail and/or media -->
+<link rel="stylesheet" href="/static/fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
+<script type="text/javascript" src="/static/fancybox/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
+<script type="text/javascript" src="/static/fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.5"></script>
+
+<link rel="stylesheet" href="/static/fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
+<script type="text/javascript" src="/static/fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
+
 </body>
 
 </html>
+
