--- a/src/psychology/game/templates/level.html
+++ b/src/psychology/game/templates/level.html
@@ -1,3 +1,5 @@
+<!--<h1 class="worldnum">{{world}}</h1>-->
+<h2 class="levelnum">{{level}}</h2>
 <div>
 {% for hint in level.hints.all %}
 <a class="hint" href="/hint/{{hint.pk}}/">Hint #{{forloop.counter}}</a>
