functional game woohoo

--- a/src/psychology/game/templates/game.html
+++ b/src/psychology/game/templates/game.html
@@ -1,7 +1,10 @@
 <html>
-<head></head>
+<head>
+	 <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+</head>
 <body>
-<div id="score">
+	
+<div class="lead" id="score">
 	
 </div>
 <div id="level">
@@ -12,9 +15,11 @@
 
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.1.1.min.js"></script>
+<script src="/static/bootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="/static/javascript.js"></script>
 <link rel="stylesheet" href="/static/fancybox/source/jquery.fancybox.css?v=2.1.4" type="text/css" media="screen" />
 <script type="text/javascript" src="/static/fancybox/source/jquery.fancybox.pack.js?v=2.1.4"></script>
+
 
 <!-- Optionally add helpers - button, thumbnail and/or media -->
 <link rel="stylesheet" href="/static/fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
